[package]
name = "krakel"
version = "0.2.0"
edition = "2021"
description = "A lean 2d kd-tree ported from OpenCamLib"
license = "LGPL-2.1-only"

[dependencies]
thiserror = "1.0.50"
glam = { version = "0.24.2", optional = true }
num-traits = "0.2.17"
approx = "0.5.1"

[features]
# needed for tests and impls of PointTrait for glam::Vec2 and glam::DVec2
glam = ["dep:glam"]

[dev-dependencies]
rand = "0.8.5"

