[package]
name = "krakel"
version = "0.2.1"
edition = "2021"
description = "A lean 2d kd-tree ported from OpenCamLib"
license = "LGPL-2.1-only"
repository = "https://github.com/eadf/krakel"

[dependencies]
thiserror = "1.0.50"
vector-traits = { version = ">=0.3.2, <1.0.0", optional = true }
num-traits = "0.2.17"
approx = "0.5.1"

[features]
vector-traits = ["dep:vector-traits"]
glam = ["vector-traits/glam"]
cgmath = ["vector-traits/cgmath"]

# Enable the feature glam in vector-traits if vector-traits feature is active
[package.metadata.dependencies.vector-traits]
features = ["glam"]

[dev-dependencies]
rand = "0.8.5"

